--- a/templates/home.html
+++ b/templates/home.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -7,6 +9,8 @@
   <meta charset="UTF-8">
 
   <title>digonal nav</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 
   <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700i" rel="stylesheet">
 
@@ -435,9 +439,9 @@ filter:blur(100px);
 
       <li><a href="">Netflix'n'Chill</a></li>
 
-      <li><a href="{% url 'blog' %}">Blog</a></li>
+      <li><a href="{% url 'blog-index' %}">Blog</a></li>
 
-      <li><a href="{% url 'login-page' %}">Login</a></li>
+      <li><a href="{% url 'login-page' %}">Login / Sign-Up</a></li>
 
       <li><a href="{% url 'contact-us' %}">Contact Us</a></li>
 
@@ -470,8 +474,11 @@ filter:blur(100px);
       </p>
       <br>
       <br>
+
       
     </section>
+
+
 
   </main>
 
