--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
 </head>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 <body>
     Login Page
+    <a href = "signup-page">Signup Page</a>
+
+<div style="margin: 10%;">
+    <div style="margin-left: 45%;"><h1>Login</h1></div>
+    <form action = '' method="POST"> {% csrf_token %}
+
+        <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label">Email</label>
+            <input name = "email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@email.com">
+        </div>
+
+        <div class="col-auto">
+            <label for="inputPassword2" class="form-label">Password</label>
+            <input name = "password" type="password" class="form-control" id="inputPassword2" placeholder="Password">
+        </div>
+        <br>
+        <div class="col-auto">
+            <button type="submit" class="btn btn-primary mb-3">Submit</button>
+        </div>
+
+    </form>
+</div>
+
 </body>
 </html>
