--- a/templates/base.html
+++ b/templates/base.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shows Page</title>
+    <title>Netflix'n'Chill</title>
 </head>
 <body>
-    <h1>The Shows we have!</h1>
-    <a href = "login-page">Login Page</a>
-    <a href = "signup-page">Signup Page</a>
+    {% block content %}
+      
+    {% endblock content %}
 </body>
 </html>
