--- a/templates/contact.html
+++ b/templates/contact.html
@@ -11,7 +11,7 @@
     <div style="margin-left: 45%;"><h1>
         Contact Us
     </h1></div>
-    <div class = "container">
+    <divw class = "container">
         <form action="" method="POST">{% csrf_token %}
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Name</label>
