--- a/templates/login.html
+++ b/templates/login.html
@@ -1,36 +1,35 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <meta name="viewport" content="width=\, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="/static/css/login.css">
+    <link rel="stylesheet" href=" .css">
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
+   
 </head>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 <body>
-    Login Page
-    <a href = "signup-page">Signup Page</a>
+        <div>
+    <div class="car" id="max4">
+        <div id="logo" class="air"></div>
+        <i><span class="iconify" data-icon="bx:bxs-user" data-inline="false"></span> <input class="air" type="text"
+                placeholder="Enter your user name"></i>
+        <i><span class="iconify" data-icon="bx:bxs-lock-alt" data-inline="false"></span><input class="air"
+                type="password" placeholder="Enter your password"></i>
 
-<div style="margin: 10%;">
-    <div style="margin-left: 45%;"><h1>Login</h1></div>
-    <form action = '' method="POST"> {% csrf_token %}
+        <button class="air" id="polo" >Login Here</button>
+        <a class="air" id="forgetlink" href="https://www.google.com">Forgot password</a>
+        <a class="air" id="forgetlink" href="{% url 'signup-page' %}">Sign Up</a>
 
-        <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">Email</label>
-            <input name = "email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="example@email.com">
-        </div>
+         </div>
+                <button type="submit" id="button" onClick="javascript:history.go(-1);">
+         <span class="iconify" id="backbutton"data-icon="bi:arrow-left-circle-fill" data-inline="false"></span></button>
 
-        <div class="col-auto">
-            <label for="inputPassword2" class="form-label">Password</label>
-            <input name = "password" type="password" class="form-control" id="inputPassword2" placeholder="Password">
-        </div>
-        <br>
-        <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-3">Submit</button>
-        </div>
-
-    </form>
-</div>
+     
 
 </body>
 </html>
