--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
     <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
    
 </head>
-<body>
+<body style="background-color: #303030;">
         <div>
     <div class="car" id="max4">
         <div id="logo" class="air"></div>
