--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,8 +12,17 @@
     <div style="margin-left: 45%;"><h1>
         Contact Us
     </h1></div>
-    <divw class = "container">
-        <form action="" method="POST">{% csrf_token %}
+    <div class = "container">
+    <center>
+        <div>
+            {% if name %}
+                <div class="alert alert-success" role="alert">
+                    Hooray!! Your e-mail is recieved {{name}} , Thanks For Contacting us!.
+                </div>
+            {% endif %}
+        </div>
+
+        <form action="" method="POST"> {% csrf_token %}
             <div class="mb-3">
                 <label for="exampleFormControlInput1" class="form-label">Name</label>
                 <input name = 'name' type="name" class="form-control" id="exampleFormControlInput1" placeholder="name">
@@ -27,6 +37,7 @@
             </div>
             <button type="submit" class="btn btn-outline-success">Submit</button>
         </form>
+        </center>
     </div>
 </body>
 </html>
